<resources>
    <string name="app_name">Ô\'Tactile</string>

    <!-- Strings related to nav -->
    <string name="nav_products">Products</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_barcode">Bar code</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings related to fragment -->
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_product">Product details</string>
    <string name="title_activity_profile">Profile info</string>
    <string name="title_activity_orders">My orders</string>
    <string name="title_activity_barcode">Barcode</string>

    <!-- errors and message -->
    <string name="error_server">Communication error with the server</string>
    <string name="error_network_connexion">Network connection error</string>
    <string name="error_bad_authentication">Your login does not exist</string>
    <string name="msg_quantity_success">Product quantity update with success</string>

    <!-- Strings related to barcode -->

    <string name="barcode_result_not_found">Result Not Found</string>
    <string name="barcode_not_found">No product matches this barcode</string>

    <!-- General product -->
    <string name="barcode_btn_update_quantity">Update quantity</string>
    <string name="barcode_btn_scan_barcode">Scan barcode</string>
    <string name="barcode_product_quantity">Product quantity</string>
    <string name="barcode_product_scan_barcode">"Scan the product barcode "</string>

    <!-- Strings related to product -->

    <!-- product -->
    <string name="product_title_title">Product title</string>
    <string name="product_title_price">Price :</string>
    <string name="product_title_quantity">Quantity :</string>
    <string name="product_title_reference">Reference :</string>
    <string name="product_title_description">Description :</string>
    <string name="product_default_image">Product image</string>

    <!-- Strings related to Settings -->

    <!-- General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_night_mode">Night mode</string>
    <string name="pref_title_language">Change system language</string>

    <!-- Advance settings-->
    <string name="pref_header_advance">Advance</string>
    <string name="pref_title_api_server_host">API server host</string>
    <string name="pref_default_api_server_host">https://api.ppe3.magicorp.fr</string>
    <string name="pref_title_img_server_host">Host of Image server</string>
    <string name="pref_default_img_server_host">https://ppe3.magicorp.fr/img</string>

    <!-- Other settings-->
    <string name="pref_header_other">Other</string>
    <string name="pref_title_sys_night_mode">Allow system night mode</string>
    <string name="pref_title_dev_settings">Dev settings</string>

    <!-- Strings related to profile -->

    <!-- General info -->
    <string name="profile_title_login">Login :</string>
    <string name="profile_title_firstName">Firstname :</string>
    <string name="profile_title_lastName">Lastname :</string>
    <string name="profile_title_email">Email :</string>
    <string name="profile_title_phone_number">Phone number :</string>
    <string name="profile_title_created_date">Created date :</string>
    <string name="profile_enter_login">Enter your login</string>
    <string name="profile_load_my_profile">Load my profile</string>

    <!-- For table addresses -->
    <string name="address_header_way">Way</string>
    <string name="address_header_complement">"Address supplement "</string>
    <string name="address_header_postal_code">Postal code</string>
    <string name="address_header_postal_city">City</string>

    <string name="profile_button_show_orders">Show orders</string>

    <!-- Strings related to orders -->
    <string name="order_not_found">Order not found</string>

    <!-- Order info -->
    <string name="order_title_no">N° :</string>
    <string name="order_title_total">Total :</string>
    <string name="order_title_shipping">Shipping :</string>
    <string name="order_title_delivery_address">Delivery address :</string>

    <!-- ordered product info -->
    <string name="order_title_title">Title :</string>
    <string name="order_title_reference">Reference :</string>
    <string name="order_title_price">Price :</string>
    <string name="order_title_quantity">Quantity :</string>
    <string name="products_not_found">Products not found</string>
    <string name="title_activity_stats">stats</string>
    <string name="stats">stats</string>

</resources>
