<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_menu_grocery_store"
            android:title="@string/nav_products" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_account"
            android:title="@string/nav_profile" />
    </group>

    <group android:id="@+id/nav_other">
        <item
            android:id="@+id/nav_barcode"
            android:icon="@drawable/ic_menu_barcode_scan"
            android:title="@string/nav_barcode" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/nav_settings" />
    </group>
</menu>
