<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lblTitleOrderedProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/order_title_title"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titleOrderedProduct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lblTitleOrderedProduct"
            app:layout_constraintTop_toTopOf="@+id/lblTitleOrderedProduct" />

        <TextView
            android:id="@+id/lblReferenceOrderedProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/order_title_reference"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblTitleOrderedProduct" />

        <TextView
            android:id="@+id/referenceOrderedProduct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/lblPriceOrderedProduct"
            app:layout_constraintStart_toEndOf="@+id/lblReferenceOrderedProduct"
            app:layout_constraintTop_toTopOf="@+id/lblReferenceOrderedProduct" />

        <TextView
            android:id="@+id/lblPriceOrderedProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/order_title_price"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/priceOrderedProduct"
            app:layout_constraintTop_toTopOf="@+id/referenceOrderedProduct" />

        <TextView
            android:id="@+id/priceOrderedProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/lblQuantityOrderedProduct"
            app:layout_constraintTop_toTopOf="@+id/lblPriceOrderedProduct" />

        <TextView
            android:id="@+id/lblQuantityOrderedProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/order_title_quantity"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/quantityOrderedProduct"
            app:layout_constraintTop_toTopOf="@+id/priceOrderedProduct" />

        <TextView
            android:id="@+id/quantityOrderedProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/lblQuantityOrderedProduct" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>